# BHFConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
cmake/: compiler.cmake  dependencies.cmake  target.cmake
doc/: borland_help_file_format.txt  database.sql
src/: CMakeLists.txt  defs.hpp  main.cpp
src/bhf/: file.cpp  file.hpp  types.hpp
src/cli/: main.cpp
src/gui/: defs.hpp  main.cpp
src/gui/model/: context.cpp  context.hpp  index.cpp  index.hpp
src/gui/ui/: mainwindow.cpp  mainwindow.hpp
